--- a/src/sass/partials/nav.scss
+++ b/src/sass/partials/nav.scss
@@ -24,6 +24,10 @@
       border-bottom: 2px solid #eacd00;
       padding-bottom: 3px;
       color: #eacd00;
+
+      &:hover {
+        color: #8a7c15;
+      }
     }
   }
 
