--- a/src/sass/partials/footer.scss
+++ b/src/sass/partials/footer.scss
@@ -6,12 +6,6 @@ footer {
   background-color: #000;
   padding: 0 30px;
 
-  // bottom: 0;
-  // position: absolute;
-  // right: 0;
-  // left: 105px;
-  // overflow: hidden;
-
   & .footer {
     display: flex;
     justify-content: center;
@@ -40,10 +34,6 @@ footer {
   & .css-z2eky3-MuiTypography-root:last-of-type {
     color: #939393;
   }
-
-  // & p {
-  //   font-size: 12px !important;
-  // }
 
   & .css-11syc77-MuiPaper-root-MuiMobileStepper-root {
     background-color: transparent;
@@ -77,6 +67,10 @@ footer {
     padding: 0;
     min-width: 0;
     text-transform: capitalize;
+
+    &:hover {
+      color: #8a7c15;
+    }
   }
 
   & .MuiGrid-grid-xs-2 {
