--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,5 +4,6 @@ $font-family: "Poppins", sans-serif;
 @import "./partials/header";
 @import "./partials/nav";
 @import "./partials/homePage";
+@import "./partials/login";
 @import "./partials/leaderboard";
 @import "./partials/footer";
