--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,5 +5,6 @@ $font-family: "Poppins", sans-serif;
 @import "./partials/nav";
 @import "./partials/homePage";
 @import "./partials/login";
+@import "./partials/dashboardPage";
 @import "./partials/leaderboard";
 @import "./partials/footer";
