--- a/src/sass/partials/login.scss
+++ b/src/sass/partials/login.scss
@@ -1,18 +1,13 @@
 .login__page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100%;
-  padding-top: 60px;
+  padding: 100px 0 50px;
 
   & form {
     position: relative;
-
+    border-radius: 10px;
     background-color: #fff;
     width: 900px;
     display: flex;
+    margin: 0 auto;
 
     & .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
       color: rgba(0, 0, 0, 0.6) !important;
@@ -90,6 +85,8 @@
       text-align: center;
       padding: 0px 45px;
       background-color: #3ab19b;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
 
       & h2 {
         font-size: 45px;
