--- a/src/sass/partials/leaderboard.scss
+++ b/src/sass/partials/leaderboard.scss
@@ -108,4 +108,77 @@
     top: 0;
     background-color: transparent;
   }
+
+  & .user__body {
+    padding: 5px 0;
+
+    & .user__body--bg-color {
+      display: flex;
+      background-color: #52565a;
+      border-bottom-right-radius: 15px;
+    }
+
+    & .css-37jdci-MuiTypography-root {
+      background-color: #ffe784;
+      display: flex;
+      align-items: center;
+      padding: 0 3px;
+    }
+
+    & .user__body--profile {
+      padding: 8px 23px 8px 11px;
+      background-color: #66707b;
+      clip-path: polygon(0 0, 100% 0, 82% 100%, 0% 100%);
+
+      & span {
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 9px;
+        border-radius: 50%;
+      }
+    }
+
+    & .user__div {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      padding: 10px 15px;
+
+      & .user__results {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 5px;
+
+        & h6 {
+          color: #fff;
+          font-size: 16px;
+          line-height: normal;
+
+          &:last-of-type {
+            font-weight: 300;
+          }
+        }
+      }
+
+      & .line__style {
+        height: 10px;
+        width: 85%;
+        background-color: #ffe784;
+        border-bottom-right-radius: 10px;
+      }
+    }
+  }
+
+  & .quantity__body {
+    display: flex;
+    line-height: normal;
+
+    & span {
+      margin-left: 3px;
+    }
+  }
 }
